# Estimator

./: .gitignore  CMakeLists.txt
bindpy/: CMakeLists.txt  bind_ekf.cpp  bind_ekf.h  bind_track.cpp  bind_track.h  bind_track_CA.cpp  bind_track_CT.cpp  bind_track_CV.cpp  bind_ukf.cpp  bind_ukf.h  bindings.cpp
scripts/: imitatior.py  imitatior_CT.py  imitatior_CT_UKF_MIT.py  imitatior_CV.py  imitator.ipynb  imitator_CA.py  imitator_CA_break_3G.py  imitator_CA_dive_5G.py  imitator_CA_new.py  imitator_CA_pitch_3G.py  imitator_CT.py  imitator_CV.py  models.py
src/: CMakeLists.txt  ekf.cpp  ukf.cpp  ukf.h  utils.cpp  utils.h
src/include/: ekf.h  models.h  sigma_points.h  storage.h  structs.h  track.h  ukf.h  ukfMath.h  utils.h
test/: CMakeLists.txt  test_angle.cpp  test_angleVel_zero.cpp  test_estimators.cpp  test_sparseMatrix.cpp  test_track.cpp  test_ukf.cpp
